tests/NormalTests/paczka1/fuzzy1/65003971.err
Error in line 9: XmX0UF88xo S464 63,2
Error in line 20: FPpe A504 46,3
Error in line 21: S45 S45 65,4
Error in line 24: F8q A504 97,7
Error in line 22: FPpe A634 18,7
Error in line 31: S45 A504 43,1
Error in line 36: S45 A634 47,2
Error in line 34: FPpe A504 8,4
